overflow fix for the home page

--- a/public/styles/dashboard.less
+++ b/public/styles/dashboard.less
@@ -33,6 +33,7 @@ html, body {height: 100%; overflow: hidden;}
   overflow-y: scroll;
   margin: 0;
   padding: 0;
+  height: 800px;
 
   @keyframes start {
     from {
