--- a/public/styles/site.css
+++ b/public/styles/site.css
@@ -29,6 +29,7 @@ body {
   overflow-y: scroll;
   margin: 0;
   padding: 0;
+  height: 800px;
 }
 @keyframes start {
   from {
